--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@angular/platform-server": "^13.2.7",
     "@angular/router": "~13.2.0",
     "@popperjs/core": "^2.11.5",
+    "@portabletext/to-html": "^2.0.0",
+    "@sanity/client": "^5.3.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.7.0",
+    "groq": "^3.7.0",
     "ngx-pagination": "^5.1.1",
+    "ngx-spinner": "13.1.1",
     "rxjs": "~7.5.0",
+    "sanity": "^3.7.0",
     "sass": "^1.51.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
